Fixed navbar not showing

--- a/src/app/components/boards/my-boards/my-boards.component.css
+++ b/src/app/components/boards/my-boards/my-boards.component.css
@@ -34,6 +34,7 @@
 h2 {
   color: #8bd201;
   cursor: pointer;
+  outline: none;
 }
 
 .boardTitle {
